# raft

./: .clang-format  CMakeLists.txt  apply-format.sh
raft/: CMakeLists.txt
raft/include/: raft_message.hpp  raft_node.hpp  raft_storage.hpp  raft_storage_memory.hpp  raft_types.hpp
raft/include/raft/: raft_message.hpp  raft_node.hpp  raft_state_machine.hpp  raft_storage.hpp  raft_storage_memory.hpp  raft_types.hpp
raft/src/: raft_node.cpp  raft_storage_memory.cpp
raft/test/: CMakeLists.txt  raft_cluster_test.cpp  raft_node_test.cpp
simulation/: CMakeLists.txt
simulation/include/simulation/: api_response.hpp  bank_client.hpp  bank_server.hpp  raft_server.hpp
simulation/src/: bank_client.cpp  bank_server.cpp  main.cpp  raft_server.cpp
simulation/test/: CMakeLists.txt  bank_server_single_test.cpp  bank_server_test.cpp  raft_server_test.cpp
